--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Sample Deployment</title>
+  <1-- 
+        background-color: #0188cc; blue
+        background-color: #5fef1c; g
+       -->
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
+      background-color: #5fef1c;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
