Back to blue V4

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Sample Deployment</title>
-  <1-- 
+  <!-- 
         background-color: #0188cc; blue
         background-color: #5fef1c; g
        -->
   <style>
     body {
       color: #ffffff;
-      background-color: #5fef1c;
+      background-color: #0188cc;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -32,7 +32,7 @@
   <div align="center">
     <h1>Congratulations</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <p>This is revision 2 aka blue</p>
+    <p>This is revision 4 aka blue</p>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
